[project]
name = "contextualstatisticalrl"
version = "0.1.0"
description = "Contextual Statistical Reinforcement Learning"
authors = [
    {name = "Cheikhou Akhmed KANE"}
]
requires-python = ">=3.11"
dependencies = [
    "statisticalrl (==2.2507)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
